<resources>
    <string name="app_name">ExploreU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dating">Dating</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="developer">Developer</string>
    <string name="terms_conditions">Terms Conditions</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="favourite">Favourite</string>
    <string name="todo">TODO</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="this_is_message_fragment">This is message fragment</string>

</resources>